Fix test whitespace.

--- a/tests/if_parentheses.css
+++ b/tests/if_parentheses.css
@@ -1,3 +1,2 @@
 body {
-    width: 100px;
-}
+    width: 100px; }
