--- a/tests/list_empty.css
+++ b/tests/list_empty.css
@@ -1,3 +1,2 @@
 #list {
-  width: 10px
-}
+  width: 10px; }
